@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon  id="plugin.program.kscleaner" name="Kodi Selective Cleaner" version="1.0.4a" provider-name="jbinkley60">
+<addon  id="plugin.program.kscleaner" name="Kodi Selective Cleaner" version="1.0.4b" provider-name="jbinkley60">
   <requires>
     <import addon="xbmc.python" version="3.0.0"/>
     <import addon="script.module.myconnpy"/>
